[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/echo.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://sounds/Laser_Shoot14.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.4715

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.3025, 16.0864 )

[sub_resource type="Animation" id=3]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "dance"
anims/dance = SubResource( 3 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0, 22 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -6.217
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
